🐛 Fixed Share button dark mode color issue

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -23,12 +23,10 @@
 
     .btn{
         background-color: transparent;
-        border-color: $dark-500;
         font-size: 0;
 
         svg{
             margin-right: 0;
-            color: $dark-700;
         }
 
         &:hover{svg{color: #fff;}}
